Improved edit macro modal appearance: Table no longer overflows modal on narrow screens (mobile). Contents of table centered vertically + horizontally. Improved command appearance (capitalized, no underscores). Added close button.

--- a/frontend/api/static/api/overview.css
+++ b/frontend/api/static/api/overview.css
@@ -10,6 +10,20 @@ body.dark .section {
     background-color: #212529;
 }
 
+/* Default + min class (overrides to make narrowest-possible cell) */
+td {
+    width: auto;
+}
+
+td.min {
+    width: 1%;
+}
+
+/* Vertically center contents of table row */
+tr {
+    vertical-align: middle;
+}
+
 /* Macro buttons */
 .btn-macro {
     height: 3rem;
